samples/_failures_safe/1761040086_c25792_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8385e22c.c: In function ‘main’:
./samples/SAFE/__tmp_8385e22c.c:146:5: error: expected ‘,’ or ‘;’ at end of input
  146 |     double ratio = (input_buf.size > 0)
      |     ^~~~~~
./samples/SAFE/__tmp_8385e22c.c:146:5: error: expected declaration or statement at end of input
